WHAT IS NEW?

April ? 2020 [Gorgonzola]

  *** New Features

   * New Plotscripting Features

  *** Changes

  *** Bugfixes
    * Linux builds should now hopefully work on all Linux systems since 2011
      (as long as SDL & SDL_mixer are installed) [Ralph]

  *** Stuff Only Developers Will Notice


January 12 2020 [Fufluns]

  Highlights:
    * Games can be played with mouse or (mostly working) joystick
    * Spritesets and backdrops can be any size
    * Hero counter-attacks
    * Hero MP meters
    * Graphical browsers for sprites, attacks, enemies, maps, textboxes, etc.
    * Enemy Usage and Foemap Statistics screens
    * Menu item colors and real unselectable menu items
    * Line slices
    * PNG, JPEG importing

  *** New Features

   * Graphics and Slices
    * Spritesets and backdrops can be any size! E.g. walkabouts can be larger
      than 20x20 [Ralph]
    * You can now import PNG and JPEG images as well as BMP (they're
      decompressed on import, so beware of importing large images) [Ralph]
    * Screenshots saved as PNGs instead of BMPs (but when using gfx_directx
      the Screenshot setting in the Options menu has priority) [Ralph]
    * When importing a backdrop or tileset from an unpaletted image, can use
      dithering for hopefully-better conversion to your master palette [Ralph]
    * Minimaps look much better. Also, you can change the minimap generation
      method in the General Game Settings menu, with four options [Ralph]
    * You can adjust the number of ticks per walkabout animation frame in
      General Game Settings [Ralph]
    * Rect slices can now be "truly" alpha-transparent (but blend results are
      still limited to the master palette) [Ralph]
    * Added fuzzy rect slice settings: fuzzy zoom, stationary pattern [Ralph]
    * Line slices [Ralph]
    * "Camera following a hero/NPC centers on..." general setting to control
      which part of a tall walkabout to center on [Ralph]

   * In-game User Interface, Controls